--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p> This page is a  placeholder, we will release something interesting later, thanks for your patience </p>
-<a href='test.html' target='第一节'> test</a>
+<a href="test.html" target="第一节"> test</a>
